syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/steve-mir/diivix_backend/pb";

message CreatePrayerRoomRequest {
  PrayerRoom prayer_room = 1;
  repeated string participant_usernames = 2;
}

// Define message for a prayer room
message PrayerRoom {
  string room_id = 1;
  string name = 2;
  google.protobuf.Timestamp created_at = 3;
  google.protobuf.Timestamp start_time = 4;
  google.protobuf.Timestamp end_time = 5;
  bool is_author = 6;
  string status = 7;
  // Status status = 7;
}

message PrayerRoomId {
  string room_id = 1;
}

message PrayerRoomResponse {
  string msg = 1;
  string room_id = 2;
  string room_name = 3;
  string web_rtc_url = 4;
}


enum Status {
  INVITED = 0;
  ACCEPTED = 1;
  DECLINED = 2;
}
// Define message for a participant
message Participant {
  string room_id = 1;
  string user_id = 2;
  Status status = 3;
}

message InviteParticipantRequest {
  string room_id = 1;
  repeated string participant_usernames = 2;
  string room_name = 3;
}

message GetUserPrayerRoomsRequest {
  string user_id = 1;
}

message InvitationResponse {
  bool accepted = 1;
  string msg = 2;
}

message GetUserRoomsRequest{
  int32 page_number = 1;
  int32 page_size = 2;
}